Commit: Refactor and cleaning unused classes
